# monorepo

./: .gitignore  AGENTS.md  Procfile.dev  README.md  docker-compose.yml  justfile  mise.toml  package.json  turbo.json
.agents/: README.md
.claude/: settings.json
apps/backend/: AGENTS.md  go.work  go.work.sum  justfile  pyproject.toml
apps/backend/libs/audit_sdk/: pyproject.toml
apps/backend/libs/audit_sdk/src/audit_sdk/: __init__.py
apps/backend/libs/auth_sdk/: pyproject.toml
apps/backend/libs/auth_sdk/src/auth_sdk/: __init__.py
apps/backend/libs/kernel/: pyproject.toml
apps/backend/libs/kernel/src/kernel/: __init__.py  errors.py  tracing.py
apps/backend/libs/observability/: pyproject.toml
apps/backend/libs/observability/src/observability/: __init__.py
apps/backend/libs/testing/: pyproject.toml
apps/backend/libs/testing/src/testing/: __init__.py
apps/backend/libs/transport/: pyproject.toml
apps/backend/libs/transport/src/transport/: __init__.py  http_client.py
apps/backend/services/admin/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
apps/backend/services/admin/migrations/versions/: v1.0.0.sql  v1.1.0.sql  v1.2.0__apps.sql
apps/backend/services/admin/src/admin/: __init__.py  config.py  db.py  deps.py  gen_openapi.py  main.py  redis_client.py
apps/backend/services/admin/src/admin/crud/: apps.py  bots.py  intentions.py  providers.py  scenes.py
apps/backend/services/admin/src/admin/models/: apps.py  bot.py  intention.py  provider.py  scene.py
apps/backend/services/admin/src/admin/routers/: apps.py  bots.py  health.py  intentions.py  providers.py  providers_internal.py  scenes.py
apps/backend/services/admin/src/admin/routes/: bots.py  health.py
apps/backend/services/admin/src/admin/schemas/: apps.py  bot.py  intention.py  provider.py  scene.py
apps/backend/services/admin/src/admin/services/: apps.py  bots.py  encryption.py  intentions.py  providers.py  scenes.py
apps/backend/services/admin/tests/: conftest.py  test_bots.py
apps/backend/services/api-gateway/: .env.example  AGENTS.md  Dockerfile  go.mod  go.sum
apps/backend/services/api-gateway/cmd/server/: main.go
apps/backend/services/api-gateway/internal/config/: config.go
apps/backend/services/api-gateway/internal/handlers/: handlers.go  handlers_test.go  health.go
apps/backend/services/api-gateway/internal/middleware/: auth.go  cors.go  middleware.go
apps/backend/services/api-gateway/internal/security/: token.go
apps/backend/services/api-gateway/internal/store/: store.go
apps/backend/services/bot/: AGENTS.md  Dockerfile  pyproject.toml
apps/backend/services/bot/src/bot/: gen_openapi.py  main.py
apps/backend/services/bot/src/bot/routes/: bots.py
apps/backend/services/bot/tests/: test_bots.py
apps/backend/services/chat/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
apps/backend/services/chat/migrations/versions/: v1.0.0.sql  v1.1.0.sql
apps/backend/services/chat/src/chat/: __init__.py  config.py  db.py  gen_openapi.py  main.py  redis_client.py
apps/backend/services/chat/src/chat/crud/: conversations.py  messages.py
apps/backend/services/chat/src/chat/models/: conversation.py  message.py
apps/backend/services/chat/src/chat/routers/: conversations.py  health.py
apps/backend/services/chat/src/chat/schemas/: conversation.py
apps/backend/services/chat/src/chat/services/: admin_client.py  conversations.py  llm.py  messages.py
apps/backend/services/gateway/: .env.example  AGENTS.md  Dockerfile  go.mod  go.sum
apps/backend/services/gateway/cmd/server/: main.go
apps/backend/services/gateway/internal/config/: config.go
apps/backend/services/gateway/internal/handlers/: handlers.go  health.go
apps/backend/services/gateway/internal/middleware/: auth.go  body_limit.go  cors.go  middleware.go  trace_id.go
apps/backend/services/gateway/migrations/versions/: v1.0.0.sql
apps/backend/services/iam/: .env.example  AGENTS.md  Dockerfile  go.mod  go.sum
apps/backend/services/iam/cmd/migrate/: main.go
apps/backend/services/iam/cmd/server/: main.go
apps/backend/services/iam/internal/config/: config.go
apps/backend/services/iam/internal/crud/: store.go
apps/backend/services/iam/internal/model/: models.go
apps/backend/services/iam/internal/router/: router.go
apps/backend/services/iam/internal/schema/: schema.go
apps/backend/services/iam/internal/security/: token.go
apps/backend/services/iam/internal/service/: auth.go  errors.go  http_meta.go  roles.go  seed.go
apps/backend/services/iam/migrations/versions/: v1.0.0.sql
apps/backend/services/identity/: .env.example  AGENTS.md  Dockerfile  go.mod  go.sum
apps/backend/services/identity/cmd/migrate/: main.go
apps/backend/services/identity/cmd/server/: main.go
apps/backend/services/identity/internal/config/: config.go
apps/backend/services/identity/internal/handlers/: handlers.go
apps/backend/services/identity/internal/security/: password.go  password_test.go  token_test.go
apps/backend/services/identity/internal/store/: store.go
apps/backend/services/identity/migrations/versions/: 0001_identity_auth.sql
apps/backend/services/telemetry/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
apps/backend/services/telemetry/migrations/versions/: v1.0.0.sql
apps/backend/services/telemetry/src/telemetry/: __init__.py  config.py  db.py  deps.py  gen_openapi.py  main.py
apps/backend/services/telemetry/src/telemetry/crud/: __init__.py  errors.py  performance.py
apps/backend/services/telemetry/src/telemetry/models/: __init__.py  events.py
apps/backend/services/telemetry/src/telemetry/routers/: __init__.py  errors.py  health.py  performance.py  rum.py
apps/backend/services/telemetry/src/telemetry/schemas/: __init__.py  error.py  performance.py  rum_batch.py
apps/backend/services/telemetry/src/telemetry/services/: __init__.py  errors.py  ingestion.py  performance.py
docs/: index.md
infra/: AGENTS.md
schemas/: AGENTS.md
scripts/: README.md  bootstrap.sh  build-frontend-static.sh  build-target.sh  db-bootstrap.sh  db-migrate.sh  dev-orchestrator.sh  doctor.sh  (+17 more)
(+195 files in other folders)
