[project]
name = "backend-workspace"
version = "0"
requires-python = ">=3.14.5,<3.15"

[tool.uv.workspace]
members = [
    "services/admin",
    "services/chat",
    "services/telemetry",
    "libs/kernel",
]

[tool.uv.sources]
kernel = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["**/migrations/versions/**", "**/__pycache__/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["migrations/", "build/", "dist/"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]
