[project]
name = "auth_sdk"
version = "0.1.0"
description = "Auth SDK: JWT verify, identity propagation"
requires-python = ">=3.14.5,<3.15"
dependencies = ["fastapi>=0.115"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_sdk"]
