[project]
name = "kernel"
version = "0.1.0"
description = "Shared kernel: errors, context, logging"
requires-python = ">=3.14.5,<3.15"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel"]
