[project]
name = "observability"
version = "0.1.0"
description = "OpenTelemetry traces/metrics/logs setup"
requires-python = ">=3.14.5,<3.15"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
