[project]
name = "testing"
version = "0.1.0"
description = "Test fixtures and factories shared across services"
requires-python = ">=3.12"
dependencies = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testing"]
