[project]
name = "transport"
version = "0.1.0"
description = "Cross-service transport: HTTP/gRPC clients, retry, circuit breaker"
requires-python = ">=3.14.5,<3.15"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transport"]
