[project]
name = "admin"
version = "0.1.0"
description = "Admin (智能体) microservice"
requires-python = ">=3.14.5,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "alembic>=1.13",
    "asyncmy>=0.2",
    "cryptography>=42",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "kernel",
    "auth_sdk",
    "audit_sdk",
    "observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/admin"]
