[project]
name = "chat"
version = "0.1.0"
description = "Chat (对话) microservice"
requires-python = ">=3.14.5,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncmy>=0.2",
    "cryptography>=42",
    "redis>=5.0",
    "httpx>=0.27",
    "openai>=1.50",
    "kernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat"]
