[project]
name = "telemetry"
version = "0.1.0"
description = "Telemetry ingestion and query service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "clickhouse-connect>=0.8",
    "kernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telemetry"]
